# personal-tech-advocate

./: .gitignore  README.md  agente_memoria.db  app.py  code_reviewer.py  personal_tech_advocate.py  product_manager.py  pyproject.toml
